force-app/main/default/objects/copado__Connection_Behavior__c/fields/copado__Promotion_Schedule__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion_Schedule__c</fullName>
    <description>The schedule for deployments (if they are scheduled)</description>
    <inlineHelpText>The schedule for deployments (if they are scheduled)</inlineHelpText>
    <label>Deployment Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>