force-app/main/default/objects/copado__Connection_Behavior__c/fields/copado__Schedule_Promotion__c.field-meta.xml
<CustomField>
    <fullName>copado__Schedule_Promotion__c</fullName>
    <description>An action link to schedule deployments</description>
    <formula>IF($Setup.copado__Settings__c.copado__Namespace__c != &apos;none&apos;,
IF(
TEXT(copado__Promotion_Behavior__c) == &apos;Scheduled&apos;, HYPERLINK(&quot;/apex/copado__ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Promotion&quot;, &quot;Schedule Deployments&quot;,&apos;_self&apos;),
&apos;&apos;),
IF(
TEXT(copado__Promotion_Behavior__c) == &apos;Scheduled&apos;, HYPERLINK(&quot;/apex/ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Promotion&quot;, &quot;Schedule Deployments&quot;,&apos;_self&apos;),
&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>An action link to schedule deployments</inlineHelpText>
    <label>Schedule Deployments</label>
    <type>Text</type>
</CustomField>