force-app/main/default/objects/copado__Connection_Behavior__c/fields/copado__Story_Status_After_Deployment__c.field-meta.xml
<CustomField>
    <fullName>copado__Story_Status_After_Deployment__c</fullName>
    <description>Automatically change the status of user stories after deploying them to the target environment</description>
    <inlineHelpText>What status should user stories be set to after they are successfully deployed?</inlineHelpText>
    <label>Story Status After Deployment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copado__Story_Status_After_Deployment</valueSetName>
    </valueSet>
</CustomField>